SERVER-71486 Fix config settings schema modification during fcv upgrade and downgrade

(cherry picked from commit e8d15ab156ca830a970c4bc54e5861fa26173e97)